--- a/friends/src/index.css
+++ b/friends/src/index.css
@@ -1,13 +1,114 @@
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Prompt|Roboto');
+
+html,
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  padding-bottom: 36px;
 }
+
+ul {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0 0 36px;
+  padding: 12px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+li {
+  list-style: none;
+  margin-right: 6px;
+  color: #204963;
+}
+
+a {
+  text-decoration: none;
+  padding: 6px;
+  color: #204963;
+}
+
+.friend-wrapper {
+  background-color: #d0c5bb;
+  display: flex;
+  width: fit-content;
+  flex-flow: column nowrap;
+  margin: 0 auto;
+  padding: 24px 58px;
+}
+
+.title-wrapper {
+  background-color: #d0c5bb;
+  padding: 24px 58px;
+  width: 539px;
+  margin: 0 auto;
+}
+
+.title {
+  background-color: #204963;
+  width: 300px;
+  padding: 6px;
+  margin: 0 auto;
+  border-radius: 4px;
+}
+
+.inner-wrapper {
+  background-color: #ffffff;
+  padding: 4px;
+}
+
+.top-title {
+  font-family: 'Prompt', sans-serif;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.62);
+  font-size: 32px;
+  background-color: #ea7158;
+  color: #ffffff;
+}
+
+.bottom-title {
+  font-family: 'Kaushan Script', cursive;
+  color: #204963;
+  font-size: 22px;
+}
+
+.key {
+  background-color: #d0c5bb;
+  padding: 24px 58px;
+  width: 539px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+
+.friend-key {
+  width: 28px;
+  height: 12px;
+  border-radius: 4px;
+  background-color: #ffffff;
+  margin: 0 6px;
+}
+
+.friend-key-text {
+  color: #ffffff;
+  margin: 0;
+  margin-right: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+}
+
+.spinner {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  color: #204963;
+}
+
+.columns {
+  display: flex;
+}
+
