--- a/friends/src/index.css
+++ b/friends/src/index.css
@@ -12,6 +12,11 @@ body {
   padding-bottom: 36px;
 }
 
+h3 {
+  background-color: rgb(177, 34, 34);
+  color: white
+}
+
 ul {
   display: flex;
   justify-content: flex-end;
